Updated version online + Readmy link

--- a/index2.html
+++ b/index2.html
@@ -40,26 +40,14 @@
       <button class="btn-new">
         <i class="ion-ios-plus-outline"></i>New game
       </button>
-      <div id="goal">
-        <label for="scores">Goal:<br /></label>
-        <input
-          id="scores"
-          type="text"
-          min="10"
-          max="1000"
-          placeholder="number"
-          value="100"
-        />
-      </div>
       <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
       <button class="btn-hold">
         <i class="ion-ios-download-outline"></i>Hold
       </button>
 
-      <img src="dice-5.png" alt="Dice 1" class="dice" id="dice1" />
-      <img src="dice-5.png" alt="Dice 2" class="dice" id="dice2" />
+      <img src="dice-5.png" alt="Dice" class="dice" />
     </div>
 
-    <script src="app.1.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
